# PC-Manager

./: CMakeLists.txt
resources/: styles.qrc
src/: main.cpp
src/core/: app.h
src/gui/: dashboard_widget.h  main_window.cpp  main_window.h
src/modules/: cpu_monitor.h  disk_monitor.h  process_monitor.h  ram_monitor.cpp  ram_monitor.h  system_monitor.cpp  system_monitor.h
